【修改】修改公司信息以及log

--- a/src/main/webapp/libs/goisan/index.html
+++ b/src/main/webapp/libs/goisan/index.html
@@ -32,7 +32,7 @@
 		        </div>
 
 		    </div> 
-		    <div class="foot">Copyright © 吉林省勾陈科技有限公司版权所有 .com All rights reserved</div>
+		    <div class="foot">天眼（深圳）光学技术发展有限公司</div>
 		</div>        
 <!------------------>
 <div class="sj">
@@ -54,7 +54,7 @@
 		        </div>
 
 		    </div> 
-		    <div class="foot1">Copyright © 吉林省勾陈科技有限公司版权所有 .com All rights reserved</div>
+		    <div class="foot1">天眼（深圳）光学技术发展有限公司</div>
 	</div>        
 
 	</body>
