--- a/src/main/webapp/libs/goisan/login.html
+++ b/src/main/webapp/libs/goisan/login.html
@@ -23,7 +23,7 @@
             </form>
         </div>
     </div> 
-    <div class="foot">Copyright © 吉林省勾陈科技有限公司版权所有 .com All rights reserved</div>
+    <div class="foot">天眼（深圳）光学技术发展有限公司</div>
 </div>        
 </body>
 </html>
