--- a/src/main/webapp/libs/goisan/login.html
+++ b/src/main/webapp/libs/goisan/login.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Free Web tutorials on HTML, CSS, XML" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <meta name="applicable-device"content="pc,mobile"/>
-<title>勾陈数字校园管理平台</title>
+<title>数字校园管理平台</title>
 <link href="css/css.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -23,7 +23,7 @@
             </form>
         </div>
     </div> 
-    <div class="foot">天眼（深圳）光学技术发展有限公司</div>
+    <div class="foot">技术支持：天眼（深圳）光学技术发展有限公司</div>
 </div>        
 </body>
 </html>
